# JobSentinel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  io.cobaltsystems.sentinel.plist  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scam_pattern.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-worker.yml  release.yml  research-cycle.yml  scheduled-scan.yml  site-check.yml
docs/: 404.html  CNAME  PRIORITIES.md  analyze-bridge.js  analyze.html  app.js  demo.html  gallery.html  index.html  jobs.html  privacy.html  robots.txt  sitemap.xml  style.css  terms.html
docs/codex-tasks/: 01-config-module.md  02-api-rate-limiting.md  03-flywheel-scorer-integration.md  04-innovation-stubs.md  05-logging.md  06-batch-analyze.md  07-scan-command.md  08-company-cache.md  09-pyproject-extras.md  10-test-coverage-gaps.md  11-flywheel-schema-fix.md  12-date-parsing.md  13-conftest-fixtures.md  14-web-extension-scaffold.md  15-security-hardening.md
docs/data/: scan-stats.json  verified-jobs.json
docs/site/: app.js  demo.html  index.html
scripts/: check-site.sh
sentinel/: __init__.py  active_learning.py  adversarial.py  analyzer.py  api.py  autonomic.py  cli.py  cloud.py  company_registry.json  company_verifier.py  config.py  cortex.py  counterfactual.py  daemon.py  db.py  disagreement.py  economics.py  ecosystem.py  engram_publisher.py  faik_patterns.py  feedback.py  flywheel.py  fraud_handbook.py  graph.py  honeypot.py  ingest.py  innovation.py  knowledge.py  link_analyzer.py  llm_detect.py  mesh.py  meta_evolution.py  models.py  mutual_info.py  neural_mesh.py  nexus.py  registry.py  research.py  robustness.py  rule_evaluator.py  (+10 more)
sentinel/web/extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
tests/: conftest.py  test_active_learning.py  test_advanced.py  test_adversarial.py  test_analyzer_ai.py  test_api.py  test_autonomic.py  test_batch.py  test_calibration.py  test_cli.py  test_cloud.py  test_company_cache.py  test_company_verifier.py  test_config.py  test_core.py  test_cortex.py  test_counterfactual.py  test_db.py  test_disagreement.py  test_drift.py  test_economics.py  test_engram_publisher.py  test_ensemble_feedback.py  test_flywheel.py  test_flywheel_integration.py  test_fraud_handbook.py  test_ghost_velocity.py  test_graph.py  test_honeypot.py  test_ingest.py  test_innovation_strategies.py  test_link_analyzer.py  test_llm_detect.py  test_market_rates.py  test_mesh.py  test_meta_evolution.py  test_meta_learning.py  test_models.py  test_mutual_info.py  test_neural_mesh.py  (+20 more)
workers/: README.md  package.json  wrangler.toml
workers/src/: index.js  migration-001-jobs.sql  schema.sql  scorer.js  signals.js
